shesmu-server/src/test/resources/good/basic.shesmu
Input gsi_std;

Define standard_execution()
  Where file_size > 5
  Where Switch workflow_version[2] When 5 Then True When 7 Then True Else False;

Define standard_fastq(string s)
  Where workflow == {"BamQC 2.7+", 3 }[0]
  Where metatype == "chemical/fastq-gzip"
  Where path == foo(file_size);

Define standard_bam()
  Where metatype == "application/bam"
  Where workflow == "Novoalign 1.1+";

Define standard_bamqc()
  Where metatype == "txt/json"
  Where workflow == {"BamQC 2.7+"}[0];

Olive
  standard_fastq("a")
  Group files = List path By accession, donor
  Run fastqc With
    memory = 4Gi,
    input = files;
