shesmu-server/src/test/resources/bad/junkatend.shesmu
Input gsi_std;

Define standard_execution()
  Where accession > 5
  Where Switch workflow_version[2] When 5 Then True When 7 Then True Else False;
 
This is some random garbage
